--- a/htdocs/CSM/login.html
+++ b/htdocs/CSM/login.html
@@ -17,6 +17,6 @@
         <p><a href="">¿Olvidaste tu contraseña?</a></p>
         <button onclick="window.location.href='/CSM/registro.html'">Registrarse</button> 
     </form>
-    <script src="Funciones.js"></script>
+    <script src="js/Funciones.js"></script>
 </body>
 </html>
