--- a/htdocs/CSM/registro.html
+++ b/htdocs/CSM/registro.html
@@ -20,6 +20,6 @@
         <input type="submit" value="Registrarte">
         <p><a href="/CSM/login.html">¿Ya tienes una cuenta?</a></p>
     </form>
-    <script src="Funciones.js"></script>
+    <script src="js/Funciones.js"></script>
 </body>
 </html>
