--- a/htdocs/CSM/login.html
+++ b/htdocs/CSM/login.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Iniciar Sesion en CSM</title>
+    <link rel="stylesheet" href="./stylelogin.css">
 </head>
 <body>
     <h1>Bienvenido<br>Inicia sesión con tu cuenta de CSM</h1>
