--- a/htdocs/CSM/tracking.html
+++ b/htdocs/CSM/tracking.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Seguimiento de Envío</title>
+    <link rel="stylesheet" href="./styletracking.css">
 </head>
 <body>
     <h1>Seguimiento de Envío</h1>
