--- a/htdocs/CSM/tracking.html
+++ b/htdocs/CSM/tracking.html
@@ -14,7 +14,7 @@
         <button type="submit">Buscar</button>
     </form>
     <div id="resultado"></div>
-    <a href="index.html">Regresar al Inicio</a>
+    <a href="index.html" class="regresa">Regresar al Inicio</a>
     <script src="js/seguimiento.js"></script>
 </body>
 </html>
