--- a/htdocs/CSM/index.html
+++ b/htdocs/CSM/index.html
@@ -11,7 +11,7 @@
         <ul>
             <li><a href="index.html">Inicio</a></li>
             <li><a href="tracking.html">Tracking</a></li>
-            <li><a href="servicios.html">Servicios</a></li>
+            <li><a href="#servicios">Servicios</a></li>
             <li><a href="login.html">Login</a></li>
         </ul>
     </nav>
@@ -27,6 +27,13 @@
         <h2>Agencia de Encomiendas</h2>
             <p>Recoge o envía tu encomienda en nuestras agencias disponibles en múltiples ubicaciones estratégicas: 
                 <br>Lima, Arequipa, Tacna, Puno, Mejía, La Punta, Piura, Moquegua y Cajamarca</p>
+    </div>
+<br>
+
+    <div class="item" id="servicios">
+        <div>
+            <img src="./imgs/slider.jpg" class="servi">
+        </div>
     </div>
     
 </body>
