--- a/htdocs/CSM/login.html
+++ b/htdocs/CSM/login.html
@@ -13,7 +13,7 @@
 
     <form name="login" method="post" action="/cgi-bin/login.pl" >
         <input type="text" name="user_email" id="user_email" placeholder="Usuario o correo electronico" required>
-        <input type="text" name="pass" id="pass" placeholder="Contraseña" required>
+        <input type="password" name="pass" id="pass" placeholder="Contraseña" required>
         <input type="submit" value="Iniciar Sesion">
         <p><a href="#">¿Olvidaste tu contraseña?</a></p>
         <button onclick="window.location.href='/CSM/registro.html'">Registrarse</button> 
