--- a/htdocs/CSM/index.html
+++ b/htdocs/CSM/index.html
@@ -38,7 +38,15 @@
             <h3>hola</h3>
         </div>
     </div>
-    
+    <footer>
+        <p>&copy; 2024 Courier Service Management . Todos los derechos reservados.</p>
+        <p class="contact">Contactanos: 992345735 / csmtransporteperu@gmail.com</p>
+        <h4>Nuestras redes:</h4>
+        <div class="social-icons">
+            <a href="https://www.facebook.com/profile.php?id=61562253545748" target="_blank">Facebook</a> |
+            <a href="https://www.instagram.com/csmtransporteperu/" target="_blank">Instagram</a>
+        </div>
+    </footer>
     
 </body>
 </html> 
