--- a/htdocs/CSM/registro.html
+++ b/htdocs/CSM/registro.html
@@ -16,7 +16,7 @@
         <input type="text" name="username" id="username"placeholder="Nombre de Usuario" required>
         <input type="password" name="password" id="password" placeholder="Contraseña" required>
         <input type="checkbox" id="verificacion">
-        <label for="verificacion">Estoy de acuerdo con los <a href="">Terminos y Condiciones</a></label>
+        <label for="verificacion">Estoy de acuerdo con los <a href="Terminos_Condiciones.html">Terminos y Condiciones</a></label>
         <input type="submit" value="Registrarte">
         <p><a href="/CSM/login.html">¿Ya tienes una cuenta?</a></p>
     </form>
