--- a/htdocs/CSM/login.html
+++ b/htdocs/CSM/login.html
@@ -15,7 +15,7 @@
         <input type="text" name="user_email" id="user_email" placeholder="Usuario o correo electronico" required>
         <input type="password" name="pass" id="pass" placeholder="Contraseña" required>
         <input type="submit" value="Iniciar Sesion">
-        <p><a href="#">¿Olvidaste tu contraseña?</a></p>
+        <p><a href="contra.html">¿Olvidaste tu contraseña?</a></p>
         <button onclick="window.location.href='/CSM/registro.html'">Registrarse</button> 
     </form>
     <script src="js/Funciones.js"></script>
