--- a/htdocs/CSM/tracking.html
+++ b/htdocs/CSM/tracking.html
@@ -10,7 +10,7 @@
     <h1>Seguimiento de Envío</h1>
     <form id="seguimientoForm">
         <label for="numero_seguimiento">Número de Seguimiento:</label>
-        <input type="text" id="numero_seguimiento" name="numero_seguimiento" required>
+        <input type="text" id="numero_seguimiento" name="numero_seguimiento" required><br>
         <button type="submit">Buscar</button>
     </form>
     <div id="resultado"></div>
